<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <EditText
        android:id="@+id/etAssunto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etAssunto"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
/>

    <EditText
        android:id="@+id/etContato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etContato"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>

    <EditText
        android:id="@+id/etTelefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etTelefone"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etEmail"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>

    <Spinner
        android:id="@+id/spAtendimento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/tipoAtendimento"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/tvData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Data (DD/MM/YYYY)"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="20dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textSize="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/tvEmpresa"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/etEmpresa"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"

            android:textSize="20dp"/>

        <ImageButton
            android:id="@+id/ibEmpresa"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="#ffff"
            android:src="@drawable/ic_search" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btSalvar"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:hint="@string/btSalvar"
            android:layout_marginLeft="30dp" />

        <Button
            android:id="@+id/btCancelar"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:hint="@string/btCancelar"
            android:layout_marginRight="30dp"/>


    </LinearLayout>

    <ListView
        android:id="@+id/lvAtendimentos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ListView>


</LinearLayout>